# Orca-OS

./: BT0509_Research_Paper.docx  DEMO_COMMANDS.md  ORCA_OS_DISTRIBUTION.md  README.md  install.sh  orca_os.py  pyproject.toml  requirements.txt  requirements_macos.txt  setup.py
config/: orca.yaml
debian/: control  orca-os.service  postinst  prerm  rules
docs/: COMPLETE_USER_JOURNEY_GUIDE.md  COMPREHENSIVE_CODEBASE_ANALYSIS.md  DEMO_COMMANDS.md  QUICK_START_GUIDE.md  TRACKER.md  USER_DOCUMENTATION_INDEX.md  USER_JOURNEY_FLOWCHART.md
orca/: __init__.py  __main__.py  cli.py
orca-os-distro/: ARCHITECTURE_C++_PERFORMANCE.md  CLEANUP_SUMMARY.md  FINAL_PROJECT_SUMMARY.md  PHASE3_4_COMPLETE.md  VMWARE_TESTING_GUIDE.md  build_c++_components.sh  cleanup_and_test.py  cleanup_report_20250922_125513.json  deploy_advanced_features.sh  final_comprehensive_test.py  final_test_report_20250922_125825.json  functional_test.py  functional_test_report_1758527605.json  functional_test_report_1758533405.json  install_and_test_complete.sh  simple_test.py  test_complete_system.py  test_individual_features.py
orca-os-distro/advanced/: orca-dashboard.py  orca-optimizer.py  orca-package-manager.py  plugin-system.py  predictive-ai.py  test_advanced_features.py
orca-os-distro/iso/: build_orca_iso.sh
orca-os-distro/kernel/: Makefile  ai-logging-system.py  ai-process-manager.py  ai-scheduler.py  orca-ai-middleware.cpp  orca-kernel-module.c  orca_ai_types.h
orca/core/: autonomy.py  context.py  daemon.py  executor.py  integration_layer.py  intelligent_router.py  (+2 more)
orca_os.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scripts/: build_deb.sh  build_iso.sh  install.sh
tests/: __init__.py
(+54 files in other folders)
